//# proto-file:
//# proto-message:

syntax = "proto3";

// 假设有如下proto文件
package base;

// 这里直接指定包名称，不使用默认包名：Demo，golang下路径
option go_package = "pb_idl/base";

message BaseResponse {
  int32 code = 1;
  string message = 2;
}